# Document_QA_RAG

./: .gitignore  Project Implementation.txt  README.md  main.py  pyproject.toml  requirements.txt
nlp_retriever_pipeline/: pipeline.ipynb
src/: chunking.py  embeddings.py  llm_service.py  loader.py  loader_images.py  loader_liteParser.py  main.py
vectorDB/: chroma.sqlite3
