[project]
name = "document-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.5",
    "faiss-cpu>=1.13.2",
    "ipykernel>=7.2.0",
    "langchain>=1.2.13",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.20",
    "langchain-groq>=1.1.2",
    "langchain-text-splitters>=1.1.1",
    "openpyxl>=3.1.5",
    "pymupdf>=1.27.2.2",
    "pypdf>=6.9.1",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.3.0",
]
